Second_Step/data/extract_data_vpl/46/146/grade_comments.txt
-The compilation or preparation of execution has failed
Tools.java:25: error: class, interface, or enum expected
    public static int fastNumberOfCancellations(int[] tab) {
                  ^
1 error
Not compiled
